test/scc/decl/semantic-errors/081.a
081.t:1:1: error: '_Dllimport' specifier cannot be applied to function definition